# fastAPI_template

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  worker.Dockerfile
docs/: TODO.md
server/: main.py
server/alembic/: env.py
server/api/: deps.py
server/api/v1/: router.py
server/api/v1/endpoints/: items.py  login.py  queue_tasks.py  users.py
server/core/: config.py  security.py
server/cruds/: base.py  crud_item.py  crud_user.py
server/db/: base_class.py  init_db.py
server/models/: dummy.py  item.py  user.py
server/tasks/demo/: demo_task.py
server/tests/cruds/: test_crud_item.py
server/utils/: common.py  dt.py
tools/: db_gen.py
