[tool.poetry]
name = "fastapitemplate"
version = "0.1.0"
description = ""
authors = ["nakam052"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.73.0"
pydantic = "^1.9.0"
SQLAlchemy = "^1.4.31"
python-dotenv = "^0.19.2"
alembic = "^1.7.5"
uvicorn = "^0.17.1"
python-multipart = "^0.0.5"
email-validator = "^1.1.3"
requests = "^2.27.1"
passlib = "^1.7.4"
gunicorn = "^20.1.0"
Jinja2 = "^3.0.3"
importlib-resources = "^5.4.0"
jose = "^1.0.0"
emails = "^0.6"
python-jose = "^3.3.0"
mysqlclient = "^2.1.0"
bcrypt = "^3.2.0"
celery = "^5.2.7"
flower = "^1.2.0"
redis = "^4.3.4"

[tool.poetry.dev-dependencies]
ipython = "^8.0.1"
jupyter = "^1.0.0"
autopep8 = "^1.6.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
black = "^22.8.0"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120
